--- a/index .html
+++ b/index .html
@@ -12,7 +12,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>the nature</title>
-    <link rel="style sheet" herf="style.css">
+    <link rel="style sheet" herf="./nature/style.css">
+
 </head>
 <body><h1 style= "text-align: center">the beauty of the nature</h1>
     <header>
@@ -29,5 +30,6 @@
       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/42/Shaqi_jrvej.jpg/1200px-Shaqi_jrvej.jpg "width="250"height="250"/>
       <img src="https://media.nature.com/lw800/magazine-assets/d41586-020-01390-w/d41586-020-01390-w_17974388.jpg"width="250 "height="250" />
     </header>
+    <script src="./nature/app.js"></script>
 </body>
 </html>
